@@ -14,7 +14,7 @@
   </tr>
   <tr>
     <td width="15%" align="left"><a href="hwgdoc_commands.html">prev</a></td>
-    <td width="70%" align="center">Alexander S.Kresin, March 2025</td>
+    <td width="70%" align="center">Alexander S.Kresin, June 2025</td>
     <td width="15%" align="right"><a href="hwgdoc_classes.html">next</a></td>
   </tr>
 </table>
@@ -3729,6 +3729,15 @@ See sample program "demosplit.prg" for details.<br>
     <br>
     Returns .T., if oObj is a valid object<br>
 
+    <p></p>
+    
+    <br><strong class="subhead"> hwg_IsRaspberry()</strong><br>
+    <br>
+    This functions returns .T.,<br>
+    if program is running on Raspberry Pi.<br>
+    The Raspberry Pi bases on LINUX, but the<br>
+    Processer type is ARM.<br>
+    
     <p></p>
 
 
